[package]
name = "mcsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-minecraft-ping = "0.8.0"
base64 = "0.13.0"
craftping = {version = "0.3.0", features = ["async-tokio"]}
ctrlc = "3.2.2"
tokio-rusqlite = "0.2.0"
#lazy_static = "1.4.0"
#mojang-api = "0.6.1"
[dependencies.tokio]
version = "1.15"
features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
    "fs"
]
[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]